estrutura inicial basica

--- a/_includes/top-header.html
+++ b/_includes/top-header.html
@@ -1,6 +1,8 @@
 <header class="top-header">
     <nav class="container is-flex">
-        <img src="/assets/img/logo.jpeg" alt="{{ site.title }}" title="{{ site.description }}" width="250">
+        <a href="/">
+            <img src="/assets/img/logo.jpeg" alt="{{ site.title }}" title="{{ site.description }}" width="250">
+        </a>
         <ul>
             <li>
                 <a href="/">Início</a>
