--- a/_includes/top-header.html
+++ b/_includes/top-header.html
@@ -8,7 +8,7 @@
                 <a href="/">Início</a>
             </li>
             <li>
-                <a href="/quem-somos">Sobre</a>
+                <a href="/doacoes">Doações</a>
             </li>
         </ul>
     </nav>
