--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,7 +5,7 @@
         {% endif %}
         
         {% if include.description %}
-        <p class="banner-subtitle"></p>
+        <p class="banner-description">{{ include.description }}</p>
         {% endif %}
     </div>
 </section>
