melhorando os itens

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="row is-centered">
             <div class="col-4 col-md-10">
                 <nav>
-                    <h4 class='block'>Endereços</h4>
+                    <h4>Endereços</h4>
                     <ul>
                         {% for endereco in site.enderecos %}
                         <li>
@@ -18,7 +18,7 @@
             
             <div class="col-4 col-md-10">
                 <nav>
-                    <h4 class="block">Siga-nos</h4>
+                    <h4 >Siga-nos</h4>
                     <ul>
                         {% for item in site.redes_sociais %}
                             <li>
@@ -33,7 +33,7 @@
             </div>
             <div class="col-4 col-md-10">
                 <nav>
-                    <h4 class='block'>Contato</h4>
+                    <h4>Contato</h4>
                     <ul>
                         <li>
                             <a href="https://api.whatsapp.com/send?phone=5531983179545"><i class="fa fa-whatsapp fa-fw"></i> {{ site.whatsapp }}</a>
