--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,6 +15,12 @@ $container-width: 1200px;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
 }
 
+%bg-image-cover{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 @mixin device-mobile {
     @media (max-width: #{$device-mobile}) {
         @content;
