--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
-<section class="banner" style="background-image: url('{{ include.image }}')">
+<section class="banner {{ include.class }}" style="background-image: url('{{ include.image }}')">
     <div class="container is-flex is-column is-center-v is-center-h">
         {% if include.title %}
         <h1 class="banner-title">{{ include.title }}</h1>
