--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,7 @@
 $color-light: #f7f7f7;
 $color-white: #ffffff;
 $color-black: #444;
+$color-grey-dark: #a0a0a0;
 $color-grey: #efefef;
 $color-red: #ed3f3c;
 
