--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -93,7 +93,7 @@ h3 {
         background-color: $color-red;
     }
 
-    
+
     @include device-mobile{
         height: calc(100vh - 125px);
     }
@@ -135,7 +135,7 @@ h3 {
     @extend %box-shadow;
     padding: 1.5rem;
     
-    border-radius: 4px;
+    border-radius: 5px;
     margin-bottom: 1rem;
 
     min-height: 300px;
@@ -153,6 +153,11 @@ h3 {
     &.has-bg-red{
         background-color: darken($color-red, 15%);
         color: $color-light;
+        transition: background-color 500ms ease;
+
+        &.has-bg-hover:hover{
+            background-color: $color-white;
+        }   
     }
 
     &.has-bg-image.has-bg-red{
@@ -161,16 +166,10 @@ h3 {
 
     .card-title{
         font-size: 1.5rem;
+        // text-shadow: 0 2px 2px transparentize($color-black, 0.65);
     }
 
 
-}
-
-
-
-
-.bg-white{
-    background-color: $color-white;
 }
 
 
