--- a/_includes/top-header.html
+++ b/_includes/top-header.html
@@ -10,6 +10,9 @@
             <li>
                 <a href="/sobre" class="{% if page.url == '/sobre' %}active{% endif %}">Sobre</a>
             </li>
+            <li>
+                <a href="/palavra-de-deus" class="{% if page.url == '/palavra-de-deus' %}active{% endif %}">Palavra de Deus</a>
+            </li>
         </ul>
     </nav>
 </header>
