--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -127,6 +127,15 @@ h3 {
     padding: 0.75rem 1rem;
     border-radius: 4px;
     cursor: pointer;
+    position: relative;
+
+    &.is-large {
+        padding: 1rem 1.7rem;
+    }
+
+    &.has-gradient{
+        background-image: linear-gradient(-35deg, transparent, darken($color-red, 25%));
+    }
 }
 
 
@@ -134,11 +143,14 @@ h3 {
     background-color: $color-white;
     @extend %box-shadow;
     padding: 1.5rem;
-    
+    display: block;
     border-radius: 5px;
     margin-bottom: 1rem;
 
-    min-height: 300px;
+    &.is-default-height {
+        min-height: 18rem;
+    }
+    
 
     &.is-center-v{
         display: flex;
@@ -168,8 +180,6 @@ h3 {
         font-size: 1.5rem;
         // text-shadow: 0 2px 2px transparentize($color-black, 0.65);
     }
-
-
 }
 
 
